# sermon_summorizer

./: .gitignore  Makefile  project_outline.md  pyproject.toml  requirements.txt
.cursor/rules/: python.mdc  sermon_summarizer.mdc
configs/: settings.yaml
docs/: plan.md
src/sermon_summarizer/: audio_splitter.py  download_manager.py  trascription_manager.py
src/sermon_summarizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sermon_summarizer/config/: loader.py
tests/: __init__.py  conftest.py  factories.py
tests/unit/: __init__.py  test_setup_validation.py
